# serializer version: 1
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_garden_gate_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PEDESTRIAN: 'pedestrian'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.living_room_garden_gate_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'open_closed_pedestrian',
    'unique_id': 'io://1234-1234-6233/877679-core:OpenClosedPedestrianState',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_garden_gate_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Garden Gate Position',
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PEDESTRIAN: 'pedestrian'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_garden_gate_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_partial_garage_door_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PARTIAL: 'partial'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.living_room_partial_garage_door_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'open_closed_partial',
    'unique_id': 'io://1234-1234-6233/7433515-core:OpenClosedPartialState',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_partial_garage_door_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Partial Garage Door Position',
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PARTIAL: 'partial'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_partial_garage_door_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_sliding_gate_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PEDESTRIAN: 'pedestrian'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.living_room_sliding_gate_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'open_closed_pedestrian',
    'unique_id': 'io://1234-1234-6233/16730051-core:OpenClosedPedestrianState',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.living_room_sliding_gate_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sliding Gate Position',
      'options': list([
        <OverkizCommandParam.OPEN: 'open'>,
        <OverkizCommandParam.PEDESTRIAN: 'pedestrian'>,
        <OverkizCommandParam.CLOSED: 'closed'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_sliding_gate_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.willow_house_protexiom_active_zones-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '',
        'A',
        'B',
        'C',
        'A,B',
        'B,C',
        'A,C',
        'A,B,C',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.willow_house_protexiom_active_zones',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active zones',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active zones',
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_zones',
    'unique_id': 'io://1234-1234-6233/2155276-core:ActiveZonesState',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[cloud_somfy_tahoma_v2_europe.json][select.willow_house_protexiom_active_zones-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Protexiom Active zones',
      'options': list([
        '',
        'A',
        'B',
        'C',
        'A,B',
        'B,C',
        'A,C',
        'A,B,C',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.willow_house_protexiom_active_zones',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '',
  })
# ---
# name: test_select_entities_snapshot[local_somfy_tahoma_v2_europe.json][select.siren_memorized_simple_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <OverkizCommandParam.STANDARD: 'standard'>,
        <OverkizCommandParam.HIGHEST: 'highest'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.siren_memorized_simple_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Memorized simple volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Memorized simple volume',
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'memorized_simple_volume',
    'unique_id': 'io://1234-5678-3293/2733989-io:MemorizedSimpleVolumeState',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_snapshot[local_somfy_tahoma_v2_europe.json][select.siren_memorized_simple_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Siren Memorized simple volume',
      'options': list([
        <OverkizCommandParam.STANDARD: 'standard'>,
        <OverkizCommandParam.HIGHEST: 'highest'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.siren_memorized_simple_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standard',
  })
# ---
